--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.5.0
+autopep8==1.6.0
+dj-database-url==0.5.0
 Django==4.0.4
 gunicorn==20.1.0
+psycopg2-binary==2.9.3
+pycodestyle==2.8.0
 python-dotenv==0.20.0
 sqlparse==0.4.2
+toml==0.10.2
 whitenoise==6.0.0
