--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.0
 autopep8==1.6.0
+crispy-bootstrap5==0.6
 dj-database-url==0.5.0
 Django==4.0.4
+django-crispy-forms==1.14.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
 pycodestyle==2.8.0
